mineral requesting